moved attribution to Footer component; fixed page cutoff on smaller screens

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -7,7 +7,7 @@
 @layer base {
   html,
   body {
-    @apply m-0 flex h-full w-full flex-col items-center justify-center bg-cream p-0 text-base;
+    @apply m-0 flex min-h-screen w-screen flex-col items-center justify-center bg-cream p-0 text-base;
   }
 
   * {
@@ -20,18 +20,25 @@
   }
 
   main {
-    @apply flex  w-full flex-col items-center justify-center gap-y-10 rounded-2xl bg-card-white py-10 px-8;
+    @apply flex w-full  flex-col items-center justify-center gap-y-10 rounded-2xl bg-card-white py-10 px-8;
     @apply md:rounded-[2rem] md:pt-14 md:pr-16 md:pb-16 md:pl-16;
   }
 
   hr {
     @apply h-1 w-full rounded-sm bg-cream;
   }
+
+  footer {
+    @apply flex items-center justify-center text-sm text-dark-brown;
+  }
+  footer a {
+    @apply text-soft-red hover:text-pale-soft-red;
+  }
 }
 
 @layer components {
-  #root {
-    @apply flex h-full w-full min-w-[325px] max-w-[540px] flex-col items-center justify-center gap-7 px-[1.6rem];
+  .root-container {
+    @apply flex  min-w-[32.5rem] max-w-[54rem] flex-col items-center justify-center gap-7 px-[1.6rem];
     @apply md:gap-10;
   }
 
@@ -56,7 +63,7 @@
   }
 
   .chart {
-    @apply flex h-96 w-full items-center justify-center;
+    @apply flex min-h-[20rem] w-full items-end;
   }
 
   .chart--day-container {
@@ -119,13 +126,6 @@
   .prev-month-label {
     @apply text-md text-medium-brown;
     @apply md:text-lg;
-  }
-
-  .attribution {
-    @apply flex items-center justify-center text-sm text-dark-brown;
-  }
-  .attribution a {
-    @apply text-soft-red hover:text-pale-soft-red;
   }
 }
 
